# ClusterClue

./: .gitignore  README.md  pyproject.toml  setup.py
clusterclue/: cli.py  pipeline.py  utils.py
clusterclue/classes/: hits.py
clusterclue/clusters/: domain_filtering.py  infrequent_genes.py  orchestrator.py  similarity_filtering.py
clusterclue/clusters/tokenize/: orchestrator.py  process_domtable.py  process_fasta.py  process_gbk.py
clusterclue/data/: domain_colors.txt  motifs_domains.txt
clusterclue/detect/: motif_detection.py
clusterclue/evaluate/: evaluate_hits.py  presto_predictions.py  visualize.py
clusterclue/gwms/: create_motifs.py  detect_motifs.py  evaluate_motifs.py  select_best.py
clusterclue/gwms/create/: build_gwms.py  cluster_matches.py  clustering.py  combine_matches.py  hdbscan_clustering.py  kmeans_clustering.py  knn_overlapping_clustering copy 2.py  knn_overlapping_clustering copy 3.py  knn_overlapping_clustering copy 4.py  knn_overlapping_clustering copy.py  knn_overlapping_clustering.py  merge_motifs.py  plots.py
clusterclue/preprocess/: domain_filtering.py  orchestrator.py  utils.py
clusterclue/preprocess/tokenize/: orchestrator.py  process_domtable.py  process_fasta.py  process_gbk.py
clusterclue/presto_stat/: cluster_modules.py  generate.py  orchestrator.py  utils.py
clusterclue/presto_top/: orchestrator.py  presto_top.py
clusterclue/visualize/: bgc.py  molecule.py  subcluster_arrower.py  utils.py  visualize.py
data/: Pfam_100subs_tc.hmm  Pfam_100subs_tc.hmm.h3f  Pfam_100subs_tc.hmm.h3i  Pfam_100subs_tc.hmm.h3m  Pfam_100subs_tc.hmm.h3p  mibig_json_4.0  motifs_with_threshold_GWM_stat_kmeans_1800.txt  validation_set_GWM_stat_kmeans_1800.html
ipresto/: cli.py  pipeline.py  utils.py
ipresto/clusters/: domain_filtering.py  infrequent_genes.py  orchestrator.py  similarity_filtering.py
ipresto/clusters/tokenize/: orchestrator.py  process_domtable.py  process_fasta.py
ipresto/gwms/: build_gwms.py  cluster_matches.py  combine_matches.py  create_gwms.py  create_motifs.py  detect_motifs.py  evaluate_motifs.py  orchestrator.py  subcluster_motif.py
ipresto/gwms/create/: build_gwms.py  cluster_matches.py  combine_matches.py  filter_gene_probabilities.py
ipresto/preprocess/: domain_filtering.py  infrequent_genes.py  orchestrator.py  similarity_filtering.py  utils.py
ipresto/preprocess/tokenize/: orchestrator.py  process_domtable.py  process_fasta.py  process_gbk.py
ipresto/presto_stat/: cluster_modules.py  detect.py  generate.py  orchestrator.py  stat_module.py  utils.py
ipresto/presto_top/: orchestrator.py  presto_top.py
ipresto/visualize/: subcluster_arrower.py
subclue/: cli.py  pipeline.py
subclue/detect/: gwm_detection.py
subclue/preprocess/: domain_filtering.py  orchestrator.py  utils.py
subclue/preprocess/tokenize/: orchestrator.py  process_domtable.py  process_fasta.py
subclue/visualize/: molecule.py  subcluster_arrower.py  utils.py
tests/preprocess/: test_cluster_utils.py  test_domain_filtering.py  test_similarity_filtering.py
tests/preprocess/tokenize/: test_process_domtable.py  test_process_gbk.py
tests/preprocess/tokenize/test_data/input/: BGC0002659.domtable  empty.domtable  nonbiosyn_domain.domtable
