[build-system]
requires = ["setuptools >= 64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ClusterClue"
version = "0.1.0"
license = {text = "AGPL-3.0-or-later"}
description = "Create and detect biosynthetic SubCluster Motifs in BGCs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Annette Lien", email = "annette.lien@posteo.de" }
]
maintainers = [
    {name = "Annette Lien", email = "a.lien@posteo.de"}
]
keywords = [
    "bioinformatics",
    "genome-mining", 
    "biosynthetic-gene-clusters",
    "clusterclue"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "biopython",
    "pyhmmer",
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
]

[project.urls]
Repository = "https://github.com/liannette/clusterclue.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]
jupyter = [
    "jupyter",
    "notebook",
    "rdkit",
]
build = [
    "gensim==4.3.3",
    "pyLDAvis",
    "statsmodels",
    "sympy",
    "scikit-learn",
    "networkx",
]

[project.scripts]
clusterclue = "clusterclue.cli:main"

[tool.setuptools.dynamic]
version = {attr = "clusterclue.__version__"}

[tool.setuptools.packages.find]
# find all packages
where = ["."]
include = ["*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"clusterclue" = ["data/*"]
